--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -38,6 +38,7 @@
    background-color: #FF3030;
    font-size: 1rem;
    border: none;
+   text-align: center;
    padding: .5rem 0rem;
    margin-top: 1rem;
    border-radius: 4px;
